--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,24 +1,22 @@
 <div class="container" fxLayout="column" fxLayoutGap="10px">
-
-
-    <div fFlex>
-        <div>
-            <h3>Menu</h3>
-            <hr>
-        </div>
+    <div>
+        <h3>Menu</h3>
+        <hr>
     </div>
 
+
     <div fxFlex>
-        <mat-grid-list  cols='2' rowHeight="200px">
-            <mat-grid-tile *ngFor="let dish of dishes">
+        <mat-grid-list cols='2' rowHeight="200px">
+            <mat-grid-tile *ngFor="let dish of dishes" (click)="onSelect(dish)">
+                <!--On click invoke the function inside ts file and dish is current dish using for statement-->
                 <img height="200px" src={{dish.image}} alt="{{dish.name}}">
-            <mat-grid-tile-footer>
-                <h1> {{dish.name | uppercase}} </h1> 
-            </mat-grid-tile-footer>
+                <mat-grid-tile-footer>
+                    <h1> {{dish.name | uppercase}} </h1>
+                </mat-grid-tile-footer>
             </mat-grid-tile>
         </mat-grid-list>
     </div>
 
-    
-
 </div>
+
+<app-dishdetail [dish]="selectedDish"></app-dishdetail>
