--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,7 +7,7 @@
 
     <div fxFlex>
         <mat-grid-list cols='2' rowHeight="200px">
-            <mat-grid-tile *ngFor="let dish of dishes" (click)="onSelect(dish)">
+            <mat-grid-tile *ngFor="let dish of dishes"  [routerLink]="[ '/dishdetail', dish.id ]" >
                 <!--On click invoke the function inside ts file and dish is current dish using for statement-->
                 <img height="200px" src={{dish.image}} alt="{{dish.name}}">
                 <mat-grid-tile-footer>
@@ -18,5 +18,3 @@
     </div>
 
 </div>
-
-<app-dishdetail [dish]="selectedDish"></app-dishdetail>
