--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,7 +5,7 @@
     </div>
 
 
-    <div fxFlex>
+    <div fxFlex *ngIf="dishes">
         <mat-grid-list cols='2' rowHeight="200px">
             <mat-grid-tile *ngFor="let dish of dishes"  [routerLink]="[ '/dishdetail', dish.id ]" >
                 <!--On click invoke the function inside ts file and dish is current dish using for statement-->
@@ -15,6 +15,9 @@
                 </mat-grid-tile-footer>
             </mat-grid-tile>
         </mat-grid-list>
+    </div>
+    <div [hidden]="dishes">
+        <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
     </div>
 
 </div>
