--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,8 +1,8 @@
 <div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column"
     fxLayoutAlign.gt-md="space-around center" fxLayoutGap="10px" fxLayoutGap.xs="0">
 
-    <div fxFlex="40">
-        <div fxFlex *ngIf="dish">
+    <div fxFlex="40" *ngIf="dish">
+        <div fxFlex>
             <mat-card>
                 <mat-card-header>
                     <mat-card-title>
@@ -17,16 +17,23 @@
                 </mat-card-content>
 
                 <mat-card-actions>
+                    <button mat-button [routerLink]="['/dishdetail',prev]">
+                        <span class="fa fa-chevron-left"></span>
+                    </button>
                     <button mat-button (click)="goBack()">BACK</button>
                     <button mat-button>LIKE</button>
                     <button mat-button>SHARE</button>
+                    <span class="flex-spacer"></span>
+                    <button mat-button [routerLink]="['/dishdetail',next]">
+                        <span class="fa fa-chevron-right"></span>
+                    </button>
                 </mat-card-actions>
             </mat-card>
         </div>
     </div>
 
-    <div fxFlex="40">
-        <div *ngIf="dish">
+    <div fxFlex="40" *ngIf="dish">
+        <div>
             <h1>Comments</h1>
             <mat-list *ngFor="let comment of dish.comments">
                 <mat-list-item>
